// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`methods records 1`] = `
Array [
  Object {
    "appliedAt": 2020-01-01T00:00:00.000Z,
    "appliedBy": "Synor",
    "dirty": false,
    "executionTime": 0,
    "hash": "",
    "id": 1,
    "title": "Base Entry",
    "type": "do",
    "version": "0",
  },
  Object {
    "appliedAt": 2020-01-01T00:00:00.000Z,
    "appliedBy": "Jest",
    "dirty": false,
    "executionTime": 0,
    "hash": "hash-01-do",
    "id": 2,
    "title": "Test One",
    "type": "do",
    "version": "01",
  },
  Object {
    "appliedAt": 2020-01-01T00:00:00.000Z,
    "appliedBy": "Jest",
    "dirty": false,
    "executionTime": 0,
    "hash": "hash-01-undo",
    "id": 3,
    "title": "Test One",
    "type": "undo",
    "version": "01",
  },
  Object {
    "appliedAt": 2020-01-01T00:00:00.000Z,
    "appliedBy": "Jest",
    "dirty": false,
    "executionTime": 0,
    "hash": "hash-02-do",
    "id": 4,
    "title": "Test Two",
    "type": "do",
    "version": "02",
  },
  Object {
    "appliedAt": 2020-01-01T00:00:00.000Z,
    "appliedBy": "Jest",
    "dirty": true,
    "executionTime": 0,
    "hash": "hash-02-undo",
    "id": 5,
    "title": "Test Two",
    "type": "undo",
    "version": "02",
  },
]
`;

exports[`methods repair 1`] = `
Array [
  Object {
    "appliedAt": 2020-01-01T00:00:00.000Z,
    "appliedBy": "Synor",
    "dirty": false,
    "executionTime": 0,
    "hash": "",
    "id": 1,
    "title": "Base Entry",
    "type": "do",
    "version": "0",
  },
  Object {
    "appliedAt": 2020-01-01T00:00:00.000Z,
    "appliedBy": "Jest",
    "dirty": false,
    "executionTime": 0,
    "hash": "hash-02-do",
    "id": 2,
    "title": "Test Two",
    "type": "do",
    "version": "02",
  },
  Object {
    "appliedAt": 2020-01-01T00:00:00.000Z,
    "appliedBy": "Jest",
    "dirty": true,
    "executionTime": 0,
    "hash": "hash-02-undo",
    "id": 3,
    "title": "Test Two",
    "type": "undo",
    "version": "02",
  },
]
`;

exports[`methods repair 2`] = `
Array [
  Object {
    "appliedAt": 2020-01-01T00:00:00.000Z,
    "appliedBy": "Synor",
    "dirty": false,
    "executionTime": 0,
    "hash": "",
    "id": 1,
    "title": "Base Entry",
    "type": "do",
    "version": "0",
  },
  Object {
    "appliedAt": 2020-01-01T00:00:00.000Z,
    "appliedBy": "Jest",
    "dirty": false,
    "executionTime": 0,
    "hash": "hash-02-do-repaired",
    "id": 2,
    "title": "Test Two",
    "type": "do",
    "version": "02",
  },
]
`;

exports[`methods run (with body) 3`] = `
Array [
  Object {
    "appliedAt": 2020-01-01T00:00:00.000Z,
    "appliedBy": "Synor",
    "dirty": false,
    "executionTime": 0,
    "hash": "",
    "id": 1,
    "title": "Base Entry",
    "type": "do",
    "version": "0",
  },
  Object {
    "appliedAt": 2020-01-01T00:00:00.000Z,
    "appliedBy": "Jest",
    "dirty": false,
    "executionTime": 0,
    "hash": "hash-01-do",
    "id": 2,
    "title": "Test One",
    "type": "do",
    "version": "01",
  },
  Object {
    "appliedAt": 2020-01-01T00:00:00.000Z,
    "appliedBy": "Jest",
    "dirty": false,
    "executionTime": 0,
    "hash": "hash-01-undo",
    "id": 3,
    "title": "Test One",
    "type": "undo",
    "version": "01",
  },
]
`;

exports[`methods run (with run) 2`] = `
Array [
  Object {
    "appliedAt": 2020-01-01T00:00:00.000Z,
    "appliedBy": "Synor",
    "dirty": false,
    "executionTime": 0,
    "hash": "",
    "id": 1,
    "title": "Base Entry",
    "type": "do",
    "version": "0",
  },
  Object {
    "appliedAt": 2020-01-01T00:00:00.000Z,
    "appliedBy": "Jest",
    "dirty": false,
    "executionTime": 0,
    "hash": "hash-02-do",
    "id": 2,
    "title": "Test Two",
    "type": "do",
    "version": "02",
  },
]
`;
